fix: vertical skirt infinite direction bug fix